# y-fight

./: CMakeLists.txt  README.md  makefile
src/: camera.cpp  controls.cpp  game.cpp  input.cpp  main.cpp  main_loop.cpp  object.cpp  world.cpp  y-fight.hpp
src/framework/: camera.cpp  collision.cpp  game.cpp  object.cpp
src/player/: controls.cpp
src/world/: world.cpp  world_generation.cpp  world_interaction.cpp  world_rooms.cpp
